{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 14,
  "lineage": "7220c5e7-9138-6a50-52e9-309706cfe1f7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Redhat_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0402e56c0a7afb78f",
            "arn": "arn:aws:ec2:ap-south-1:225989340431:instance/i-01c996e0eaf6fdd6d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01c996e0eaf6fdd6d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04b9edcd747bc4c45",
            "private_dns": "ip-10-0-1-28.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.28",
            "public_dns": "ec2-13-126-200-133.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.200.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cac42c21dd686c84",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-041d4e480038669b5",
            "tags": {
              "Name": "redhat-Instance"
            },
            "tags_all": {
              "Name": "redhat-Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-003bf01d48c3790fc"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.terraform-sg",
            "aws_subnet.terra_subnet",
            "aws_vpc.vpc_terraform",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:225989340431:internet-gateway/igw-0db1bb13df39ba84e",
            "id": "igw-0db1bb13df39ba84e",
            "owner_id": "225989340431",
            "tags": {
              "name": "terra-igw"
            },
            "tags_all": {
              "name": "terra-igw"
            },
            "vpc_id": "vpc-0eac5d4325b87b24b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:225989340431:route-table/rtb-0891d7bf19178bb09",
            "id": "rtb-0891d7bf19178bb09",
            "owner_id": "225989340431",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0db1bb13df39ba84e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "public-rt",
              "service": "Terraform"
            },
            "tags_all": {
              "name": "public-rt",
              "service": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eac5d4325b87b24b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.terra-igw",
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association-Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cf86cbc467e0ae8",
            "route_table_id": "rtb-0891d7bf19178bb09",
            "subnet_id": "subnet-041d4e480038669b5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.terra-igw",
            "aws_route_table.public-rt",
            "aws_subnet.terra_subnet",
            "aws_vpc.vpc_terraform",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association-Terraform_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039f762fa2c9bcc9c",
            "route_table_id": "rtb-0891d7bf19178bb09",
            "subnet_id": "subnet-083fdce65e03d3d0e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.terra-igw",
            "aws_route_table.public-rt",
            "aws_subnet.terra_subnet_2",
            "aws_vpc.vpc_terraform",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:225989340431:security-group/sg-003bf01d48c3790fc",
            "description": "allow ports for vpc",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-003bf01d48c3790fc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-sg",
            "name_prefix": "",
            "owner_id": "225989340431",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "allow_all"
            },
            "tags_all": {
              "name": "allow_all"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eac5d4325b87b24b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:225989340431:subnet/subnet-041d4e480038669b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041d4e480038669b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "225989340431",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "subnet1"
            },
            "tags_all": {
              "name": "subnet1"
            },
            "vpc_id": "vpc-0eac5d4325b87b24b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_terraform",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:225989340431:subnet/subnet-083fdce65e03d3d0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083fdce65e03d3d0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "225989340431",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "subnet2"
            },
            "tags_all": {
              "name": "subnet2"
            },
            "vpc_id": "vpc-0eac5d4325b87b24b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_terraform",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:225989340431:vpc/vpc-0eac5d4325b87b24b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-004223666f796ee4b",
            "default_route_table_id": "rtb-0bfae1c6ce9bf9317",
            "default_security_group_id": "sg-064a1ceeb8863d38a",
            "dhcp_options_id": "dopt-0019f70510bb31e7d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eac5d4325b87b24b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bfae1c6ce9bf9317",
            "owner_id": "225989340431",
            "tags": {
              "name": "test_vpc"
            },
            "tags_all": {
              "name": "test_vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}